--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mapbox-gl": "^3.11.0",
     "octokit": "^5.0.3",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
     "tailwindcss": "^4.1.4",
